--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokecatch",
-  "homepage": "https://tomerpacific.github.io/starter-project/",
+  "homepage": "https://Synclaireee.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
